# pylucy

./: .env.dev  .env.dev.example  .env.dev.local  .env.example  .env.prod.example  .env.testing.real  .gitignore  ANALISIS-CURSOS-INGRESO.md  CATALOGO_TAREAS_PREDEFINIDAS.md  COMO_PROBAR_EMAIL.md  CONFIGURACION.md  CONFIGURACION_EMAIL_OFFICE365.md  DEPLOY-ALFA.md  DEPLOY-QUICK.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-QUICKSTART.md  DOCUMENTACION-CONTROL-EMAILS.md  DOCUMENTACION-EMAIL-STATUS.md  DOCUMENTACION-UPDATE-CRON.md  Dockerfile  ERRORS.md  FAQ_INGESTA_Y_EMAIL.md  GUIA_TAREAS_PERSONALIZADAS.md  INDICE_DOCUMENTACION_COLAS.md  INSTRUCCIONES-SERVIDOR.md  PERMISOS_AZURE_AD.md  PLANTILLAS-EMAIL.md  PRUEBAS_SISTEMA_COLAS.md  PRUEBA_EMAIL_OFFICE365.md  README-ENV.md  README.md  RESUMEN-FINAL.md  RESUMEN_ACTUALIZACION.md  SEGURIDAD_CREDENCIALES.md  SOBRE_LUCY.md  actualizar_plantillas.sh  backup-configuracion-navidad.sql  backup-cursos-navidad.sql  backup-navidad.sh  backup.sh  (+45 more)
app/: .env  env-example  iniciar_ngrok.sh  manage.py  pyproject.toml  requirements.txt  runserver.sh  runserver_and_ngrok.sh
app/core/: admin.py  apps.py  models.py  services.py  uti_client.py  uti_ingesta.py
app/core/management/commands/: sync_uti.py
app/core/migrations/: 0001_initial.py  0002_alter_comision_options_alter_inscripcion_options_and_more.py
app/lucy/: asgi.py  env-example  settings.py  urls.py  wsgi.py
app/static/css/: fce_admin.css
app/templates/: home.html
app/templates/admin/: base_site.html  index.html  index.html.alpine
backup-navidad-20251225_172716/: cursos-config.sql  (+6 more)
(+178 files in other folders)
