[project]
name = "lucy-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "django>=5.0",
  "djangorestframework",
  "django-filter",
  "psycopg[binary]",
  "django-environ",
  "django-material-admin",
  "django-admin-rangefilter>=0.12.0,<0.13",
  "requests>=2.31.0",
]

[tool.uv]
# por ahora no necesitás nada acá, lo podés dejar vacío

